--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ xcuserdata/
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
 DerivedData/
-*.moved-aside
+## Various settings
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -21,6 +21,10 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+xcuserdata/
+xcuserdata/*
+!xcuserdata/where/ever/Breakpoints.xcbkptlist
+!xcuserdata/where/ever/Breakpoints_v2.xcbkptlist
 
 ## Obj-C/Swift specific
 *.hmap
@@ -54,7 +58,7 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
